# linkright_production

./: .gitignore  CLAUDE.md  KNOWN_BUGS.md  README.md  RESUME_CUSTOMIZATION_PROMPT.md  SETUP.md  lefthook.yml
.beads/: metadata.json
.claude/: launch.json
_bmad-output/: project-context.md
applications/: INDEX.md
docs/: IMPLEMENTATION_SUMMARY.md  KNOWN_BUGS.md  LINKRIGHT_QUALITY_REFERENCE.md  README_TOOLS_5-8.md  website_QA-AUDIT-REPORT.md
docs/archive/code/sync/: pyproject.toml  server.py
docs/archive/code/sync/data/: career_profiles.py  html_entities.py  roboto_weights.py
docs/archive/code/sync/tools/: measure_width.py  track_verbs.py  validate_contrast.py
docs/archive/code/sync/utils/: html_parser.py
docs/archive/code/truss/: Cargo.toml
docs/archive/code/truss/.truss/: resolved-config.yaml
docs/archive/code/truss/src/: main.rs
docs/archive/code/truss/src/analysis/: gitnexus.rs  graph.rs  mod.rs
docs/archive/code/truss/src/commands/: domain.rs  mod.rs
docs/archive/code/truss/src/decompose/: streams.rs
docs/archive/code/truss/src/groom/: mod.rs  validate.rs
docs/archive/code/truss/src/inspect/: gate_report.rs  mod.rs
docs/archive/code/truss/src/models/: domain.rs  inspection.rs  manifest.rs
docs/archive/code/truss/src/retro/: analyze.rs  collect.rs  store.rs
extension/: README.md  manifest.json
oracle-backend/: .env.example  lifeos.service  main.py  requirements.txt
prompts/: CHANGELOG.md  nugget_extraction_frontier.md
repo/: CLAUDE.md
scripts/: map_user_journeys.py
specs/: CLAUDE.md  README.md  company_template.csv  (+1 more)
(+663 files in other folders)
