[package]
name = "truss-cli"
version = "0.1.0"
edition = "2021"
description = "Parallel Agent Orchestration Framework"
authors = ["Satvik Jain <satvik.jain@iitdalumni.com>"]

[[bin]]
name = "truss"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
dirs = "5"
colored = "2"
petgraph = "0.6"
chrono = { version = "0.4", features = ["serde"] }
